# BongSearch

./: FindMe.ps1  README.md  Sys-Info-to-File.ps1  pyproject.toml  run  setup.py
app/: __init__.py  __main__.py
app/static/css/: header.css  main.css
app/templates/: display.html  header.html  index.html  opensearch.xml
