[tool.poetry]
name = "bongsearch"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-session = "^0.3.2"
stem = "^1.8.0"
waitress = "^1.4.4"
bs4 = "^0.0.1"
cryptography = "^3.4.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
